k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: hotel-booking
  labels:
    name: hotel-booking
    app: hotel-booking-website
